Esc a value change doesn't recalc compositor #32705

Closed
opened 2012-09-30 09:22:15 +02:00 by Daniel Salazar · 8 comments
Member

%%%Tiles compositor is interactive (keeps refreshing the viewer) while you drag a node value. However if you cancel this tweak with Esc it doesn't refresh back to normal%%%

%%%Tiles compositor is interactive (keeps refreshing the viewer) while you drag a node value. However if you cancel this tweak with Esc it doesn't refresh back to normal%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Can you explain in more detail?

Tried it with a simple setup:
RenderLayer -> Mix -> Composite/Viewer. I changed the "Fac" of the Mix node, but canceled the tweak via ESC. Composite and Viewer refreshed back to normal.

Zanqdo, you should really provide example blend files and more infos. The bug report guidelines are meant for everyone ;) %%%

%%%Can you explain in more detail? Tried it with a simple setup: RenderLayer -> Mix -> Composite/Viewer. I changed the "Fac" of the Mix node, but canceled the tweak via ESC. Composite and Viewer refreshed back to normal. Zanqdo, you should really provide example blend files and more infos. The bug report guidelines are meant for everyone ;) %%%
Author
Member

%%%AH dammit, i thought it was always happening :) Will do my homework and upload a blend%%%

%%%AH dammit, i thought it was always happening :) Will do my homework and upload a blend%%%

%%%So, can you give an example node which fails? %%%

%%%So, can you give an example node which fails? %%%
Author
Member

%%%OK apparently it has to do with the render size, some race condition or something. I have uploaded a simple file at 1080p resolution

Render
Change the blur node's size to 0 and while still holding down the mouse press Esc%%%

%%%OK apparently it has to do with the render size, some race condition or something. I have uploaded a simple file at 1080p resolution Render Change the blur node's size to 0 and while still holding down the mouse press Esc%%%

%%%Looks like ESC cancels compositor job as well. Can not say more details current,y will look into this.%%%

%%%Looks like ESC cancels compositor job as well. Can not say more details current,y will look into this.%%%

%%%The issue should be now fixed in svn rev51421. Thanks for the report, closing.%%%

%%%The issue should be now fixed in svn rev51421. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32705
No description provided.